// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectBox> should render the selectbox with given mock components 1`] = `
<SelectBox
  className=""
  classNames={Object {}}
  defaultText="filter.sort.default"
  duration={225}
  handleSelectionUpdate={[Function]}
  icon={[Function]}
  initialValue={null}
  item={[Function]}
  items={
    Array [
      Object {
        "label": "My item #1",
        "value": "item_1",
      },
      Object {
        "label": "My item #2",
        "value": "item_2",
      },
      Object {
        "label": "My item #3",
        "value": "item_3",
      },
    ]
  }
  testId={null}
>
  <div
    className=""
    data-test-id={null}
  >
    <button
      aria-controls="filter.sort.default"
      aria-expanded={null}
      aria-haspopup={true}
      data-test-id="filter.sort.default"
      onClick={[Function]}
      type="button"
    >
      <span>
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string="filter.sort.default"
        >
          <span
            className={null}
            role={null}
          >
            filter.sort.default
          </span>
        </Translate>
      </span>
      <div
        className=""
      >
        <MockIconComponent>
          <span
            id="icon"
          />
        </MockIconComponent>
      </div>
    </button>
    <Dropdown
      className=""
      duration={225}
      easing={null}
      isOpen={false}
      onComplete={[Function]}
      onStart={[Function]}
    >
      <Transition
        duration={225}
        easing={null}
        from={
          Object {
            "height": 0,
          }
        }
        onComplete={[Function]}
        onStart={[Function]}
        origin="0 0 0"
        set={null}
        to={
          Object {
            "height": 0,
          }
        }
      >
        <div
          aria-hidden={true}
          className="css-rdsogp "
          key=".0"
        >
          <ul
            id="filter.sort.default"
            role="menu"
            tabIndex="-1"
          >
            <SelectBoxItem
              className=""
              forwardedRef={null}
              handleSelectionUpdate={[Function]}
              isSelected={false}
              key="item_1"
              label="My item #1"
              value="item_1"
              wrapper={[Function]}
            >
              <li
                className=""
                data-test-id="My item #1"
                onClick={[Function]}
                onKeyUp={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                <MockItemComponent>
                  <div>
                    <Translate
                      className={null}
                      params={Object {}}
                      role={null}
                      string="My item #1"
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        My item #1
                      </span>
                    </Translate>
                  </div>
                </MockItemComponent>
              </li>
            </SelectBoxItem>
            <SelectBoxItem
              className=""
              forwardedRef={null}
              handleSelectionUpdate={[Function]}
              isSelected={false}
              key="item_2"
              label="My item #2"
              value="item_2"
              wrapper={[Function]}
            >
              <li
                className=""
                data-test-id="My item #2"
                onClick={[Function]}
                onKeyUp={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                <MockItemComponent>
                  <div>
                    <Translate
                      className={null}
                      params={Object {}}
                      role={null}
                      string="My item #2"
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        My item #2
                      </span>
                    </Translate>
                  </div>
                </MockItemComponent>
              </li>
            </SelectBoxItem>
            <SelectBoxItem
              className=""
              forwardedRef={null}
              handleSelectionUpdate={[Function]}
              isSelected={false}
              key="item_3"
              label="My item #3"
              value="item_3"
              wrapper={[Function]}
            >
              <li
                className=""
                data-test-id="My item #3"
                onClick={[Function]}
                onKeyUp={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                <MockItemComponent>
                  <div>
                    <Translate
                      className={null}
                      params={Object {}}
                      role={null}
                      string="My item #3"
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        My item #3
                      </span>
                    </Translate>
                  </div>
                </MockItemComponent>
              </li>
            </SelectBoxItem>
          </ul>
        </div>
      </Transition>
    </Dropdown>
  </div>
</SelectBox>
`;

exports[`<SelectBox> should render with a default text 1`] = `
<SelectBox
  className=""
  classNames={Object {}}
  defaultText="Foo"
  duration={225}
  handleSelectionUpdate={[Function]}
  icon={[Function]}
  initialValue={null}
  item={[Function]}
  items={
    Array [
      Object {
        "label": "My item #1",
        "value": "item_1",
      },
      Object {
        "label": "My item #2",
        "value": "item_2",
      },
      Object {
        "label": "My item #3",
        "value": "item_3",
      },
    ]
  }
  testId={null}
>
  <div
    className=""
    data-test-id={null}
  >
    <button
      aria-controls="Foo"
      aria-expanded={null}
      aria-haspopup={true}
      data-test-id="Foo"
      onClick={[Function]}
      type="button"
    >
      <span>
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string="Foo"
        >
          <span
            className={null}
            role={null}
          >
            Foo
          </span>
        </Translate>
      </span>
      <div
        className=""
      >
        <MockIconComponent>
          <span
            id="icon"
          />
        </MockIconComponent>
      </div>
    </button>
    <Dropdown
      className=""
      duration={225}
      easing={null}
      isOpen={false}
      onComplete={[Function]}
      onStart={[Function]}
    >
      <Transition
        duration={225}
        easing={null}
        from={
          Object {
            "height": 0,
          }
        }
        onComplete={[Function]}
        onStart={[Function]}
        origin="0 0 0"
        set={null}
        to={
          Object {
            "height": 0,
          }
        }
      >
        <div
          aria-hidden={true}
          className="css-rdsogp "
          key=".0"
        >
          <ul
            id="Foo"
            role="menu"
            tabIndex="-1"
          >
            <SelectBoxItem
              className=""
              forwardedRef={null}
              handleSelectionUpdate={[Function]}
              isSelected={false}
              key="item_1"
              label="My item #1"
              value="item_1"
              wrapper={[Function]}
            >
              <li
                className=""
                data-test-id="My item #1"
                onClick={[Function]}
                onKeyUp={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                <MockItemComponent>
                  <div>
                    <Translate
                      className={null}
                      params={Object {}}
                      role={null}
                      string="My item #1"
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        My item #1
                      </span>
                    </Translate>
                  </div>
                </MockItemComponent>
              </li>
            </SelectBoxItem>
            <SelectBoxItem
              className=""
              forwardedRef={null}
              handleSelectionUpdate={[Function]}
              isSelected={false}
              key="item_2"
              label="My item #2"
              value="item_2"
              wrapper={[Function]}
            >
              <li
                className=""
                data-test-id="My item #2"
                onClick={[Function]}
                onKeyUp={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                <MockItemComponent>
                  <div>
                    <Translate
                      className={null}
                      params={Object {}}
                      role={null}
                      string="My item #2"
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        My item #2
                      </span>
                    </Translate>
                  </div>
                </MockItemComponent>
              </li>
            </SelectBoxItem>
            <SelectBoxItem
              className=""
              forwardedRef={null}
              handleSelectionUpdate={[Function]}
              isSelected={false}
              key="item_3"
              label="My item #3"
              value="item_3"
              wrapper={[Function]}
            >
              <li
                className=""
                data-test-id="My item #3"
                onClick={[Function]}
                onKeyUp={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                <MockItemComponent>
                  <div>
                    <Translate
                      className={null}
                      params={Object {}}
                      role={null}
                      string="My item #3"
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        My item #3
                      </span>
                    </Translate>
                  </div>
                </MockItemComponent>
              </li>
            </SelectBoxItem>
          </ul>
        </div>
      </Transition>
    </Dropdown>
  </div>
</SelectBox>
`;

exports[`<SelectBox> should render with a preselected selection 1`] = `
<SelectBox
  className=""
  classNames={Object {}}
  defaultText="Foo"
  duration={225}
  handleSelectionUpdate={[Function]}
  icon={[Function]}
  initialValue="item_2"
  item={[Function]}
  items={
    Array [
      Object {
        "label": "My item #1",
        "value": "item_1",
      },
      Object {
        "label": "My item #2",
        "value": "item_2",
      },
      Object {
        "label": "My item #3",
        "value": "item_3",
      },
    ]
  }
  testId={null}
>
  <div
    className=""
    data-test-id={null}
  >
    <button
      aria-controls="My item #2"
      aria-expanded={null}
      aria-haspopup={true}
      data-test-id="My item #2"
      onClick={[Function]}
      type="button"
    >
      <span>
        <Translate
          className={null}
          params={Object {}}
          role={null}
          string="My item #2"
        >
          <span
            className={null}
            role={null}
          >
            My item #2
          </span>
        </Translate>
      </span>
      <div
        className=""
      >
        <MockIconComponent>
          <span
            id="icon"
          />
        </MockIconComponent>
      </div>
    </button>
    <Dropdown
      className=""
      duration={225}
      easing={null}
      isOpen={false}
      onComplete={[Function]}
      onStart={[Function]}
    >
      <Transition
        duration={225}
        easing={null}
        from={
          Object {
            "height": 0,
          }
        }
        onComplete={[Function]}
        onStart={[Function]}
        origin="0 0 0"
        set={null}
        to={
          Object {
            "height": 0,
          }
        }
      >
        <div
          aria-hidden={true}
          className="css-rdsogp "
          key=".0"
        >
          <ul
            id="My item #2"
            role="menu"
            tabIndex="-1"
          >
            <SelectBoxItem
              className=""
              forwardedRef={null}
              handleSelectionUpdate={[Function]}
              isSelected={false}
              key="item_1"
              label="My item #1"
              value="item_1"
              wrapper={[Function]}
            >
              <li
                className=""
                data-test-id="My item #1"
                onClick={[Function]}
                onKeyUp={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                <MockItemComponent>
                  <div>
                    <Translate
                      className={null}
                      params={Object {}}
                      role={null}
                      string="My item #1"
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        My item #1
                      </span>
                    </Translate>
                  </div>
                </MockItemComponent>
              </li>
            </SelectBoxItem>
            <SelectBoxItem
              className=""
              forwardedRef={[Function]}
              handleSelectionUpdate={[Function]}
              isSelected={true}
              key="item_2"
              label="My item #2"
              value="item_2"
              wrapper={[Function]}
            >
              <li
                className=""
                data-test-id="My item #2"
                onClick={[Function]}
                onKeyUp={[Function]}
                role="menuitem"
                tabIndex="0"
              >
                <MockItemComponent>
                  <div>
                    <Translate
                      className={null}
                      params={Object {}}
                      role={null}
                      string="My item #2"
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        My item #2
                      </span>
                    </Translate>
                  </div>
                </MockItemComponent>
              </li>
            </SelectBoxItem>
            <SelectBoxItem
              className=""
              forwardedRef={null}
              handleSelectionUpdate={[Function]}
              isSelected={false}
              key="item_3"
              label="My item #3"
              value="item_3"
              wrapper={[Function]}
            >
              <li
                className=""
                data-test-id="My item #3"
                onClick={[Function]}
                onKeyUp={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                <MockItemComponent>
                  <div>
                    <Translate
                      className={null}
                      params={Object {}}
                      role={null}
                      string="My item #3"
                    >
                      <span
                        className={null}
                        role={null}
                      >
                        My item #3
                      </span>
                    </Translate>
                  </div>
                </MockItemComponent>
              </li>
            </SelectBoxItem>
          </ul>
        </div>
      </Transition>
    </Dropdown>
  </div>
</SelectBox>
`;
